...
    skills: Skill[];
}

export const CLASSES: CharacterClass[] = [
    {
        id: "dread_knight",
        name: "Dread Knight",
        description: "A cursed juggernaut fueled by vengeance. Heavily armored and relentless.",
        assetId: "Skeleton_Warrior", 
        stats: { 
            strength: { min: 9, max: 13 },
            dexterity: { min: 2, max: 5 },
            intelligence: { min: 2, max: 5 },
...
